# osarracino

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Connector.cpp  Connector.h  README.md  Readme.txt  installer.sh  main.cpp
cli/: CMakeLists.txt  GameManager.cpp  GameManager.h  Player.h  main.cpp
cli/profiles/: AggressiveWhitePlayerProfile.h  ExperimentalBlackPlayerProfile.h  ExperimentalWhitePlayerProfile.h  FallbackBlackPlayerProfile.h  FallbackWhitePlayerProfile.h  ParametrizedPlayerProfile.h  PlayerProfile.h  ProfileManager.cpp  ProfileManager.h  SimpleBlackPlayerProfile.cpp  SimpleBlackPlayerProfile.h  SimpleWhitePlayerProfile.cpp  SimpleWhitePlayerProfile.h
cli/util/: ArgParser.cpp  ArgParser.h  ConfigSet.h  MemoryManager.cpp  MemoryManager.h
editor/: INSTALL.md  README.md  TablutBoardEditor.desktop  editor.py  neoedit.py  player.py  tbbf.xml
editor/resources/: style.css
lib/: BitMaskHandler.cpp  BitMaskHandler.h  Board.cpp  Board.h  CMakeLists.txt  Connector.h  Evaluator.cpp  Evaluator.h  Minimax.cpp  Minimax.h  MoveCalculator.cpp  MoveCalculator.h
lib/evaluator/: BlackEvaluator.cpp  BlackEvaluator.h  Evaluator.h  ReverseTorettoBlackEvaluator.cpp  ReverseTorettoBlackEvaluator.h  TheRockWhiteEvaluator.cpp  TheRockWhiteEvaluator.h  TorettoWhiteEvaluator.cpp  TorettoWhiteEvaluator.h  WhiteEvaluator.cpp  WhiteEvaluator.h  WhiteEvalutator.cpp  WhiteEvalutator.h
lib/model/: Board.cpp  Board.h  DTranspositionTable.cpp  DTranspositionTable.h  Position.cpp  Position.h  TranspositionTable.cpp  TranspositionTable.h  ZobristHash.cpp  ZobristHash.h
lib/movegenerator/: ArnoldMoveGenerator.cpp  ArnoldMoveGenerator.h  HeisenbergMoveGenerator.cpp  HeisenbergMoveGenerator.h  MadaraMoveGenerator.cpp  MadaraMoveGenerator.h  MoveGenerator.h  ThetaMoveGenerator.cpp  ThetaMoveGenerator.h
lib/network/: Connector.cpp  Connector.h
lib/search/: CarloSearchEngine.h  CollisionSearchEngine.h  FSMSearchEngine.h  Minimax.cpp  Minimax.h  RamboSearchEngine.cpp  RamboSearchEngine.h  SearchEngine.h  ThanosSearchEngine.h  ZaWarudoSearchEngine.h
lib/util/: BitUtils.cpp  BitUtils.h  BoardUtils.cpp  BoardUtils.h  MoveUtil.cpp  MoveUtil.h  Timer.h
osarracino/: Board.cpp  Board.h  CMakeLists.txt  Connector.cpp  main.cpp
osarracino_tests/: CMakeLists.txt
osarracino_tests/tests/: CMakeLists.txt  test.cpp
test/: BitUtilsTest.cpp  BlackEvaluatorTest.cpp  BoardTest.cpp  CMakeLists.txt  MainTestAll.cpp  MoveGeneratorTest.cpp  SearchEngineTest.cpp  ToBeMovedEmptyTest.cpp  WhiteEvaluatorTest.cpp  ZobristHashTest.cpp
test/boards/: ZobristHashTest.cpp  initial_board.tbbf  test_black_can_exit_citadel.tbbf  test_black_can_move_in_citadel.tbbf  test_black_cant_enter_back_in_citadel.tbbf  test_black_winning_move.tbbf  test_board_black_win_king_adiacent_throne_1.tbbf  test_board_black_win_king_adiacent_throne_2.tbbf  test_board_black_win_surround_in_throne_2.tbbf  test_board_black_win_surround_in_throne_3.tbbf  test_board_is_black_win_2.tbbf  test_board_is_black_win_3.tbbf  test_board_is_black_win_4.tbbf  test_board_king_surrounded_by_black_or_throne.tbbf  test_board_king_surrounded_by_black_or_throne_3.tbbf  test_board_king_surrounded_by_black_or_throne_4.tbbf  test_board_king_surrounded_by_black_or_throne_5.tbbf  test_board_king_surrounded_by_black_or_throne_6.tbbf  test_board_king_surrounded_in_throne.tbbf  test_board_king_surrounded_in_throne_2.tbbf  test_board_simple_white_move_1.tbbf  test_board_simple_white_move_2.tbbf  test_central_black_can_exit_citadel.tbbf  test_king_can_move_6.tbbf  test_only_one_color_can_move.tbbf  test_only_one_color_can_move_2.tbbf  test_white_evaluator_black_win.tbbf  test_white_evaluator_double_side_winning_move.tbbf  test_white_evaluator_single_side_winning_move.tbbf  test_white_evaluator_surrounded_is_worse_not_surrounded.tbbf  test_white_evaluator_surrounded_is_worse_surrounded.tbbf
test/tests/: BitUtilsTest.cpp  BlackEvaluatorTest.cpp  BoardTest.cpp  CMakeLists.txt  MoveGeneratorTest.cpp  ThetaMoveGeneratorTest.cpp  ToBeMovedEmptyTest.cpp  WhiteEvaluatorTest.cpp  test.cpp
