add_executable (osarracino main.cpp GameManager.cpp GameManager.h profiles/PlayerProfile.h Player.h profiles/SimpleWhitePlayerProfile.h profiles/SimpleBlackPlayerProfile.h util/MemoryManager.cpp util/MemoryManager.h profiles/ParametrizedPlayerProfile.h profiles/FallbackWhitePlayerProfile.h profiles/FallbackBlackPlayerProfile.h util/ConfigSet.h util/ArgParser.cpp util/ArgParser.h)

target_link_libraries (osarracino libosarracino)